ArvoreSintatica/Karloff.java
/* Generated By:JavaCC: Do not edit this line. Karloff.java */
import ast.*;
import java.io.*;
import java.util.ArrayList;
import java.util.List;

public class Karloff implements KarloffConstants {
    public static void main(String args[]) throws Exception {
        FileInputStream file = new FileInputStream(new File(args[0]));
        Karloff parser = new Karloff(file);
        Prog arvore = parser.Karloff();
        gerarCodigo(arvore, args[0]);
    }

    public static void gerarCodigo(Prog arvore, String caminho) {
        String arvoreString;
        File arquivo;
        FileOutputStream saida = null;

        arvoreString = arvore.toString();
        caminho = caminho.replace(".kar", ".c");

        System.out.println("Conte\u00fado gerado para o arquivo C: " + arvoreString);

        arquivo = new File("saida/" + caminho);
        try {
            arquivo.getParentFile().mkdirs();
            arquivo.createNewFile();
            saida = new FileOutputStream(arquivo);
            saida.write(arvoreString.getBytes());
        } catch (IOException e) {
            e.printStackTrace();
        } finally {
            if (saida != null) {
                try {
                    saida.close();
                } catch (IOException e) {
                    e.printStackTrace();
                }
            }
        }
    }

// Nova regra para o programa principal
  static final public Prog Karloff() throws ParseException {
    Main main = null;
    ArrayList<VarDecl> vardecls = new ArrayList<VarDecl>();
    ArrayList<Comando> comandos = new ArrayList<Comando>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
      main = Main();
      break;
    default:
      jj_la1[0] = jj_gen;
      vardecls = Vardecl();
      comandos = SeqComandos();
    }
        // Cria um Main em branco para encapsular comandos/variáveis se no main específico
        if (main == null) {
            System.out.println("Programa sem main expl\u00edcito.");
            main = new Main(vardecls, comandos);
        }
        {if (true) return new Prog(main, new ArrayList<Fun>());}
    throw new Error("Missing return statement in function");
  }

  static final public Main Main() throws ParseException {
    ArrayList<VarDecl> vardecls;
    ArrayList<Comando> comandos;
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(APARENTESES);
    jj_consume_token(FPARENTESES);
    jj_consume_token(ACHAVES);
    vardecls = Vardecl();
    comandos = SeqComandos();
    jj_consume_token(FCHAVES);
        System.out.println("Dentro de Main - N\u00famero de vari\u00e1veis: " + vardecls.size());
        System.out.println("Dentro de Main - N\u00famero de comandos: " + comandos.size());
        {if (true) return new Main(vardecls, comandos);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<Comando> SeqComandos() throws ParseException {
    ArrayList<Comando> comandos = new ArrayList<Comando>();
    Comando cmd;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PRINTOUT:
      case IF:
      case WHILE:
      case READINPUT:
      case RETURN:
      case ID:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      cmd = Comando();
        comandos.add(cmd);
    }
        {if (true) return comandos;}  // Retorna os comandos coletados

    throw new Error("Missing return statement in function");
  }

  static final public ArrayList<VarDecl> Vardecl() throws ParseException {
    ArrayList<VarDecl> decls = new ArrayList<VarDecl>();
    String tipo;
    Token id;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEWVAR:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      jj_consume_token(NEWVAR);
      tipo = Tipo();
      id = jj_consume_token(ID);
      jj_consume_token(PONTOVIRGULA);
        System.out.println("Nova vari\u00e1vel declarada: tipo=" + tipo + ", id=" + id.image);

        decls.add(new VarDecl(tipo, id.image));
    }
        {if (true) return decls;}
    throw new Error("Missing return statement in function");
  }

  static final public String Tipo() throws ParseException {
    Token tipo;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FLOAT:
      tipo = jj_consume_token(FLOAT);
                     {if (true) return "float";}
      break;
    case BOOLEAN:
      tipo = jj_consume_token(BOOLEAN);
                       {if (true) return "boolean";}
      break;
    case VOID:
      tipo = jj_consume_token(VOID);
                    {if (true) return "void";}
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Comando Comando() throws ParseException {
    Comando cmd = null;
    Exp exp = null;
    Token id;
    ArrayList<Comando> seqComandos = new ArrayList<Comando>();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      // Atribuição
          id = jj_consume_token(ID);
      jj_consume_token(IGUAL);
      exp = Exp();
      jj_consume_token(PONTOVIRGULA);
        cmd = new CAtribuicao(0, id.image, exp); // Atribuição
        System.out.println("Comando de atribui\u00e7\u00e3o: id=" + id.image + ", exp=" + exp);
        {if (true) return cmd;}
      break;
    default:
      jj_la1[4] = jj_gen;
      if (jj_2_1(3)) {
        jj_consume_token(PRINTOUT);
        jj_consume_token(APARENTESES);
        exp = Exp();
        jj_consume_token(FPARENTESES);
        jj_consume_token(PONTOVIRGULA);
        cmd = new CPrint(0, exp);
        System.out.println("Comando PRINTOUT: exp=" + exp);
        {if (true) return cmd;}
      } else if (jj_2_2(3)) {
        jj_consume_token(PRINTOUT);
        id = jj_consume_token(ID);
        jj_consume_token(PONTOVIRGULA);
        exp = new EVar(id.image);
        cmd = new CPrint(0, exp);
        System.out.println("Comando PRINTOUT: var=" + id.image);
        {if (true) return cmd;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          jj_consume_token(IF);
          jj_consume_token(APARENTESES);
          exp = Exp();
          jj_consume_token(FPARENTESES);
          jj_consume_token(THEN);
          jj_consume_token(ACHAVES);
        seqComandos = SeqComandos();

        cmd = new CIf(0, exp, seqComandos);
        {if (true) return cmd;}
          break;
        case WHILE:
          jj_consume_token(WHILE);
          jj_consume_token(APARENTESES);
          exp = Exp();
          jj_consume_token(FPARENTESES);
          jj_consume_token(ACHAVES);
        seqComandos = SeqComandos();
        System.out.println("Comando WHILE: exp=" + exp);
        cmd = new CWhile(0, exp, seqComandos);
        {if (true) return cmd;}
          break;
        case RETURN:
          jj_consume_token(RETURN);
          exp = Exp();
          jj_consume_token(PONTOVIRGULA);
        cmd = new CReturn(0, exp);
        System.out.println("Comando RETURN: exp=" + exp);
        {if (true) return cmd;}
          break;
        case READINPUT:
          jj_consume_token(READINPUT);
          jj_consume_token(APARENTESES);
          jj_consume_token(FPARENTESES);
          jj_consume_token(PONTOVIRGULA);
        cmd = new CReadInput(0, "entrada");
        {if (true) return cmd;}
          break;
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Comando ComandoLinha1() throws ParseException {
    Comando cmd = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PONTOVIRGULA:
      jj_consume_token(PONTOVIRGULA);
                     {if (true) return cmd;}
      break;
    case PRINTOUT:
    case IF:
    case WHILE:
    case READINPUT:
    case RETURN:
    case ID:
      Comando();
                {if (true) return cmd;}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Exp() throws ParseException {
    Exp exp1, exp2;
    String op;
    exp1 = Fator();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SOMA:
      case SUBTRACAO:
      case MULTIPLICACAO:
      case DIVISAO:
      case MENOR:
      case MAIOR:
      case IGUALA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
      op = Op();
      exp2 = Fator();
            exp1 = new EOpExp(op, exp1, exp2);
    }
        {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  static final public String Op() throws ParseException {
    Token op;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SOMA:
      op = jj_consume_token(SOMA);
                  {if (true) return "+";}
      break;
    case SUBTRACAO:
      op = jj_consume_token(SUBTRACAO);
                       {if (true) return "-";}
      break;
    case MULTIPLICACAO:
      op = jj_consume_token(MULTIPLICACAO);
                           {if (true) return "*";}
      break;
    case DIVISAO:
      op = jj_consume_token(DIVISAO);
                     {if (true) return "/";}
      break;
    case MENOR:
      op = jj_consume_token(MENOR);
                   {if (true) return "<";}
      break;
    case MAIOR:
      op = jj_consume_token(MAIOR);
                   {if (true) return ">";}
      break;
    case IGUALA:
      op = jj_consume_token(IGUALA);
                    {if (true) return "==";}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public Exp Fator() throws ParseException {
    Exp exp;
    Token num, id;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      num = jj_consume_token(NUM);
                  {if (true) return new EFloat(Float.parseFloat(num.image));}
      break;
    case ID:
      id = jj_consume_token(ID);
                {if (true) return new EVar(id.image);}
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(PRINTOUT)) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(PONTOVIRGULA)) return true;
    return false;
  }

  static private boolean jj_3R_4() {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_scan_token(PRINTOUT)) return true;
    if (jj_scan_token(APARENTESES)) return true;
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_7() {
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_6() {
    if (jj_scan_token(NUM)) return true;
    return false;
  }

  static private boolean jj_3R_5() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_6()) {
    jj_scanpos = xsp;
    if (jj_3R_7()) return true;
    }
    return false;
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public KarloffTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[10];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0x3a8000,0x10000,0x6040,0x0,0x3a0000,0x3a8800,0xcf000000,0xcf000000,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x8,0x0,0x0,0x8,0x0,0x8,0x1,0x1,0x18,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[2];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Karloff(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Karloff(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new KarloffTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Karloff(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new KarloffTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public Karloff(KarloffTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(KarloffTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  static final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  static private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;
  static private int[] jj_lasttokens = new int[100];
  static private int jj_endpos;

  static private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      boolean exists = false;
      for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        exists = true;
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              exists = false;
              break;
            }
          }
          if (exists) break;
        }
      }
      if (!exists) jj_expentries.add(jj_expentry);
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[37];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 10; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 37; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

  static private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 2; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
          }
        }
        p = p.next;
      } while (p != null);
      } catch(LookaheadSuccess ls) { }
    }
    jj_rescan = false;
  }

  static private void jj_save(int index, int xla) {
    JJCalls p = jj_2_rtns[index];
    while (p.gen > jj_gen) {
      if (p.next == null) { p = p.next = new JJCalls(); break; }
      p = p.next;
    }
    p.gen = jj_gen + xla - jj_la; p.first = token; p.arg = xla;
  }

  static final class JJCalls {
    int gen;
    Token first;
    int arg;
    JJCalls next;
  }

}
